[package]
name = "Noir-Halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm = "0.8.1"
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_04_20"}
